bad/bin_op_lth_void_int.example_compiler_output
ERROR
[1mbad/bin_op_lth_void_int.lat:4:8: [1;31merror: [0;1moperator < is defined only for int values and string values, not `void` and `int`[m
	foo() < 42;
	      [1;32m^[m
